# Polymarket-trading-bot-15min-BTC

./: .env.example  .gitignore  README-CN.md  README.md  install.ps1  install.sh  pyproject.toml
docs/: CONFIGURATION-CN.md  CONFIGURATION.md  FEATURES-CN.md  FEATURES.md  GETTING_STARTED-CN.md  GETTING_STARTED.md  README-CN.md  README.md  TROUBLESHOOTING-CN.md  TROUBLESHOOTING.md
src/: config.py  config_validator.py  diagnose_config.py  generate_api_key.py  logger.py  lookup.py  risk_manager.py  simple_arb_bot.py  statistics.py  test_balance.py  trading.py  utils.py  wss_market.py
